--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.7",
+    "bootstrap": "^5.0.1",
     "node-modules": "^1.0.1",
+    "punycode": "^2.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
     "buffer": "^6.0.3",
-    "parcel": "^2.11.0",
+    "parcel": "^2.12.0",
     "process": "^0.11.10"
   },
   "browserlist": [
